<resources>
    <string name="app_name">Bili</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home_page">首 页</string>
    <string name="download">离线缓存</string>
    <string name="star">我的收藏</string>
    <string name="history">历史记录</string>
    <string name="people">关注的人</string>
    <string name="wallet">我的钱包</string>
    <string name="subject">主题选择</string>
    <string name="app">应用推荐</string>
    <string name="setting">设置与帮助</string>
    <string name="forget_passwd">忘记密码？</string>
    <string name="username_hint">你的手机号/邮箱</string>
    <string name="passwd_hint">请输入密码</string>
    <string name="register">注册账号</string>
    <string name="login">登陆</string>
    <string name="n_login">  未登录</string>
    <string name="registerinfo">请确认你的国家和地区并输入手机号</string>
    <string name="china">中国大陆</string>
    <string name="quhao">+86</string>
    <string name="phone">请输入常用手机号</string>
    <string name="btn_verify">获取验证码</string>
    <string name="tv_verify_des">点击"获取验证码"按钮，即表示同意注册协议</string>
    <string name="tv_info">验证码已发送到一下手机，请在5分钟内完成注册</string>
    <string name="ed_verify">请输入验证码</string>
    <string name="tv_remain_sec">秒后重发</string>
    <string name="btn_next">下一步</string>
    <string name="tv_passwd_info">设置密码后，你就可以使用手机号登陆bilibili</string>
    <string name="tv_password">密码</string>
    <string name="tv_password_info">6-16个字符以内，区分大小写</string>
    <string name="tv_password_1">确认密码</string>
    <string name="tv_password_info1">请再次输入</string>
    <string name="nickname">昵称</string>
    <string name="nickname_info">3-30个字符以内</string>
    <string name="done">完成</string>
    <string name="tv_can">恭喜！你现在可以：</string>
    <string name="tv_can_more">升级到正式会员，你还可以：</string>
    <string name="tv_barrage">发送普通弹幕</string>
    <string name="tv_collect">收藏喜爱视频</string>
    <string name="tv_barrage_spec">发送个性弹幕</string>
    <string name="tv_video_comment">参与视频评论</string>
    <string name="tv_video_coin">给视频投硬币</string>
    <string name="tv_idol">投稿成为偶像</string>
    <string name="bn_new_world">打开新世界的大门</string>
    <string name="tv_new">换一波推荐</string>
    <string name="tv_living">  正在直播</string>
    <string name="btn_more">查看更多</string>
    <string name="tv_fresh">8条新动态，点击刷新！</string>
    <string name="tv_network_error">网络出错了，加载失败……</string>
    <string name="tv_live">我要直播</string>
    <string name="tv_watch_live">我要观看直播</string>
    <string name="tv_search_hint">搜索视频、番剧、up主或av号</string>
    <string name="tv_intrest_search">兴趣圈</string>
    <string name="tv_topic_search">话题中心</string>
    <string name="tv_activity_search">活动中心</string>
    <string name="tv_rank_original_search">原创排行榜</string>
    <string name="tv_rank_all_search">全区排行榜</string>
</resources>
