<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_page"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_page" />
        <item
            android:id="@+id/downloads"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/download" />

        <item
            android:id="@+id/stars"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/star" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/people"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/people" />
        <item
            android:id="@+id/wallet"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/wallet" />

        <item
            android:id="@+id/subject"
            android:icon="@drawable/ic_color_lens_black_24dp"
            android:title="@string/subject" />
        <item
            android:id="@+id/app"
            android:icon="@drawable/ic_shop_black_24dp"
            android:title="@string/app" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setting" />
    </group>

</menu>
