<?xml version="1.0" encoding="utf-8"?>
<!--
  ~         Copyright (C) 2016-2017 宙斯
  ~         All rights reserved
  ~
  ~        filename :Class4
  ~        description :
  ~
  ~         created by jackzhous at  11/07/2016 12:12:12
  ~         http://blog.csdn.net/jackzhouyu
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/register_success_bar"
            android:background="@drawable/ic_answer_banner">
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_success_bar"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_can"
                android:layout_marginLeft="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:id="@+id/tv_barrage"
                    android:text="@string/tv_barrage"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:id="@+id/tv_collect"
                    android:text="@string/tv_collect"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_can_more"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_barrage_spec"
                    android:id="@+id/tv_barrage_spec"
                    android:gravity="left"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_video_comment"
                    android:id="@+id/tv_video_comment"
                    android:gravity="left"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_video_coin"
                    android:id="@+id/tv_video_coin"
                    android:gravity="left"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_idol"
                    android:id="@+id/tv_idol"
                    android:gravity="left"
                    android:layout_weight="1"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:text="@string/bn_new_world"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:onClick="onOpenNewWorld"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>